# drf_7_cw

./: .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: build_and_deploy.yaml
config/: settings.py  urls.py
habits/: admin.py  models.py  pagination.py  serializers.py  telegram_task.py  urls.py  validators.py  variables.py  views.py
habits/migrations/: 0001_initial.py  0002_alter_habit_options.py  0003_alter_habit_complete_time.py  0004_alter_habit_complete_time.py  0005_habit_next_date.py  0006_alter_habit_time.py
habits/tests/: test_habits.py  test_telegram.py
users/: models.py  serializers.py  tests.py  urls.py  views.py
users/management/commands/: superuser.py  user.py
users/migrations/: 0001_initial.py
